--- a/frontend/christmas-card/src/styles/cardStyle.css
+++ b/frontend/christmas-card/src/styles/cardStyle.css
@@ -12,7 +12,7 @@
 }
 
 *{
-    font-family:"CedarvilleCursive",cursive ;
+    font-family:"Aguafina",cursive ;
     font-weight: bold;
     font-size: larger;
     font-weight: lighter
